Change Log

Version 1.0.0
- Initial Release

Version 1.0.1
- Resolved bug that could result in repeated listings in Zone Listings
- Changed all icons to utilize SVGs from Material Design Icons (https://materialdesignicons.com/)
- Dramactically reduced the number of times the icons were being called and redrawn
- Changed default theme to "Cover Dark"
- Set default icon theme to "Circles"
- Added configuration option to select icons between icons with or without circles
- Miscellaneous aesthetic changes

Version ?
Functional:

UI:
- Added new theme based on the dominant color of the cover art
- Decluttered "Now Playing" screen
- Moved "Select Zone" to the Menu
- Added status bar which shows a clock, the zone name, and the status of Loop, Shuffle, and Auto Radio
- Removed as much text as possible

Backend:
- Simplified showing and hiding overlays
- Collapsed MANY global variables into much fewer arrays
- General code cleanup