@@ -68,6 +68,9 @@
     <div id="libraryBrowser">
         <span class="messages">Library (todo)</span>
     </div>
+    <div id="pairDisabled">
+        <span class="messages">This extension is not enabled.  Please use a Roon client to enable it.</span>
+    </div>
     <div id="overlayMainMenu" class="overlay">
         <div class="overlayContentAlign" onclick="$('#overlayMainMenu').hide()">
             <div class="overlayContent">
